# vertex_finding

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  ami_environment.yml  download_data.py  environment.yml  problem.py  requirements.txt  vertex_finding_starting_kit.ipynb
PatPV/: CMakeLists.txt
PatPV/include/: PVSeedTool.h  patPV_Definitions.cuh  run_PatPV_CPU.h
PatPV/src/: AdaptivePV3DFitter.cpp  PVChecker.cpp  PVSeedTool.cpp  run_PatPV_CPU.cpp
PatPVmarian/: CMakeLists.txt
PatPVmarian/include/: AdaptivePV3DFitter.h  PVChecker.h
baseline/: CMakeLists.txt  baseline.cpp  readData.cpp
data/test/: RapidVPData_6719289_74672.json
data/train/: RapidVPData_6719289_74665.json  RapidVPData_6719289_74666.json  RapidVPData_6719289_74667.json  RapidVPData_6719289_74668.json  RapidVPData_6719289_74669.json  RapidVPData_6719289_74673.json
marian/: CMakeLists.txt  readData.h
submissions/baseline/: object_detector.py
submissions/starting_kit/: libRAMP.dylib  libx86PatPV.dylib  object_detector.py
